creusot/tests/should_fail/prusti/snap_eq/double.stderr
error: Unsatisfied bound X: creusot_contracts::prusti_prelude::SnapEq
  --> double.rs:12:5
   |
12 |     my_eq1(x, y)
   |     ^^^^^^^^^^^^

error: aborting due to 1 previous error

